# encrypted-communication

./: .gitignore  .readthedocs.yaml  LICENSE.txt  pyproject.toml  requirements.txt
docs/source/: api.rst  conf.py  encryption.rst  helpers.rst  index.rst  usage.rst  user.rst
src/app/: app.py  client.py  constants.py  ui.py
src/encrypted_comm/: __init__.py  encryption.py  helpers.py  user.py
src/secure_engine/: encryption.py  helpers.py  user.py
tests/: dummy_classes.py  network_test.py
