[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encrypted-communication"
version = "0.0.1"
dependencies = [
    "cryptography",
    "termcolor"]
requires-python = ">=3.8"
authors = [
    {name = "Kartik Choudhary"},
    {email = "kartikchoudh@umass.edu"}]
description = "A simple encrypted communication system"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["encryption", "communication", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
server-cli = "encrypted_comm:main"

[tool.hatch.build.targets.wheel]
packages = ["src/encrypted_comm"]